# gac-gaze_analysis_c

./: .doxygen  .gitignore  .gitmodules  .ycm_extra_conf.py  CHANGELOG.md  Makefile  Makefile.am  README.md  config.mk  configure.ac
doc/: notes.md
example/: Makefile  README.md  example  example.c  sample_real.csv
include/: gac.h  gac_aoi.h  gac_aoi_analysis.h  gac_aoi_collection.h  gac_aoi_collection_analysis.h  gac_filter_fixation.h  gac_filter_gap.h  gac_filter_noise.h  gac_filter_saccade.h  gac_fixation.h  gac_plane.h  gac_queue.h  gac_saccade.h  gac_sample.h  gac_screen.h
src/: gac.c  gac_aoi.c  gac_aoi_analysis.c  gac_aoi_collection.c  gac_aoi_collection_analysis.c  gac_filter_fixation.c  gac_filter_gap.c  gac_filter_noise.c  gac_filter_saccade.c  gac_fixation.c  gac_plane.c  gac_queue.c  gac_saccade.c  gac_sample.c  gac_screen.c
test/: .ycm_extra_conf.py  Makefile  makefile.mk
test/filter/: test.c
test/queue/: .ycm_extra_conf.py  Makefile  test  test.c
test/test_filter_fixation/: test.c
test/test_filter_gap/: test.c
test/test_filter_noise/: test.c
test/test_filter_saccade/: test.c
test/test_gaze/: test.c
test/test_queue/: Makefile  test.c
